# dezess

./: .gitignore  CLAUDE.md  README.md  autoresearch-results-hard.tsv  autoresearch-results.tsv  bench_all_targets.py  bench_braak_recipe.py  bench_complementary.py  bench_complementary_clean.py  bench_complementary_stale.py  bench_complementary_standard_stale.py  bench_correlation_sweep.py  bench_correlation_sweep_v2.py  bench_cp_efficiency.py  bench_cp_sweep.py  bench_dr_efficiency.py  bench_funnel_reparam.py  bench_gamma_jump.py  bench_hparam.py  bench_mode_jumping.py  bench_multi_gpu.py  bench_multimodal.py  bench_multimodal_tempered.py  bench_nurs.py  bench_nurs_vmap.py  bench_nuts1_slice_mh.py  bench_nuts_slice_mh.py  bench_nuts_vs_blackjax_matched.py  bench_nuts_vs_blackjax_truth.py  bench_optimization.py  bench_sanders_surrogate.py  bench_slice_rhat_vs_steps.py  bench_slice_vs_mh_arviz.py  bench_slice_vs_mh_arviz_plots.py  bench_slice_vs_mh_whitened.py  bench_snooker.py  bench_sp_gj_decomp.py  bench_stream_targets.py  bench_tuner_target.py  bench_walker_scaling.py  (+49 more)
dezess/: __init__.py  api.py  arviz_compat.py  checkpoint.py  diagnostics.py  kde.py  reference_sampler.py  sampler.py  streaming.py  targets.py  targets_stream.py  transforms.py  tuning.py  utils.py  zeus_jax.py
dezess/benchmark/: __init__.py  compare.py  metrics.py  registry.py  runner.py  visualize.py
dezess/core/: __init__.py  loop.py  sharding.py  slice_sample.py  types.py
dezess/directions/: __init__.py  complementary.py  (+15 more)
examples/: basic_gaussian.py  compare_emcee.py  early_stopping.py
(+69 files in other folders)
